Fixing footer overlapping the content div #6637 (#6806)

--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -1,15 +1,13 @@
 .main-footer {
-  position: sticky;
+  /**
+   * Removing position, top and margin-top attributes 
+   * because the footer is now a child of a flex element
+   * and no need to modify the positioning attributes 
+   */
   width: 100%;
   background: $color-darkblue;
   color: $color-white;
   padding: 42px 25px 20px;
-  bottom: 0;
-  margin-top: -205px;
-
-  @media #{$bp-mobile-up} {
-    margin-top: -165px;
-  }
 
   @media #{$bp-desktop-up} {
     padding: 48px 69px;
